# ed_gui_server

./: .travis.yml  CMakeLists.txt  README.md  package.xml
ed_gui_server/: CMakeLists.txt  package.xml  plugins.xml
ed_gui_server/src/: gui_server_plugin.cpp  gui_server_plugin.h  robot.cpp  robot.h
ed_gui_server/tools/: rviz_publisher.cpp
ed_gui_server_msgs/: CMakeLists.txt  package.xml
ed_gui_server_msgs/msg/: EntityInfo.msg  EntityMeshAndVolumes.msg  Mesh.msg
ed_gui_server_msgs/srv/: Map.srv  QueryMeshes.srv
src/: gui_server_plugin.cpp  gui_server_plugin.h  robot.cpp  robot.h
