<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_gui_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>ed_gui_server_msgs</depend>
  <depend>geolib2</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tue_config</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

</package>
