<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_gui_server</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <author email="s.v.d.dries@tue.nl">Sjoerd van den Dries</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_gui_server_msgs</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rgbd</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tue_config</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_gui_server_msgs</exec_depend>
  <exec_depend>geolib2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rgbd</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tue_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
  </export>

</package>
